# Parallel-Louvain-Method

./: .gitignore  CMakeLists.txt  README.md  out  renumber.py  strong-parallel.sh  strong_par_bfs_1632329.err  weak-parallel.sh  weak-scaling-sequential.sh
data/: split.py  split_graph.sh  strong-parallel-36.txt  weak-parallel-scale11-cpu16.txt  weak-parallel-scale14-cpu25.txt  weak-parallel-scale15-cpu25.txt  weak-parallel-scale4-cpu4.txt  weak-parallel-scale5-cpu4.txt  weak-parallel-scale7-cpu9.txt  weak-seq-10.txt  weak-seq-12.txt  weak-seq-14.txt  weak-seq-15.txt  weak-seq-4.txt  weak-seq-6.txt  weak-seq-7.txt  weak-seq-9.txt
data-cuda-checkpoints/: out  print.py  strong-parallel-16.txt  strong-parallel-25.txt  strong-parallel-9.txt  weak-parallel-scale10-cpu16.txt  weak-parallel-scale11-cpu16.txt  weak-parallel-scale12-cpu16.txt  weak-parallel-scale13-cpu25.txt  weak-parallel-scale14-cpu25.txt  weak-parallel-scale15-cpu25.txt  weak-parallel-scale16-cpu36.txt  weak-parallel-scale4-cpu4.txt  weak-parallel-scale5-cpu4.txt  weak-parallel-scale6-cpu4.txt  weak-parallel-scale7-cpu9.txt  weak-parallel-scale8-cpu9.txt  weak-parallel-scale9-cpu9.txt
data-cuda-nocheckpoints/: out  print.py  strong-parallel-16.txt  strong-parallel-25.txt  strong-parallel-9.txt  weak-parallel-scale10-cpu16.txt  weak-parallel-scale12-cpu16.txt  weak-parallel-scale13-cpu25.txt  weak-parallel-scale16-cpu32.txt  weak-parallel-scale16-cpu36.txt  weak-parallel-scale6-cpu4.txt  weak-parallel-scale8-cpu9.txt  weak-parallel-scale9-cpu9.txt  weak-seq-11.txt  weak-seq-13.txt  weak-seq-16.txt  weak-seq-5.txt  weak-seq-8.txt
data-nocuda/: out  print.py  weak-parallel-scale10-cpu16.txt  weak-parallel-scale11-cpu16.txt  weak-parallel-scale12-cpu16.txt  weak-parallel-scale13-cpu25.txt  weak-parallel-scale14-cpu25.txt  weak-parallel-scale15-cpu25.txt  weak-parallel-scale16-cpu36.txt  weak-parallel-scale4-cpu4.txt  weak-parallel-scale5-cpu4.txt  weak-parallel-scale6-cpu4.txt  weak-parallel-scale7-cpu9.txt  weak-parallel-scale8-cpu9.txt  weak-parallel-scale9-cpu9.txt  weak-seq-10.txt  weak-seq-11.txt  weak-seq-12.txt  weak-seq-13.txt  weak-seq-14.txt  weak-seq-15.txt  weak-seq-16.txt  weak-seq-4.txt  weak-seq-5.txt  weak-seq-6.txt  weak-seq-7.txt  weak-seq-8.txt  weak-seq-9.txt
data/cora/: 0  1  2  3  x00  x01  x02  x03
data/cora8/: 0  1  2  3  4  5  6  7
data/graph/: 0  1  2  3  x00  x02  x03
data/graph/level-1/: 0.txt  1.txt  2.txt  3.txt
data/graph3/: 0  1  2
include/: clockcycle.h
src/: CMakeLists.txt  comm  community.cpp  community.h  distcommunity.cpp  distcommunity.h  graph.cpp  graph.h  graph500  hello.cu  kernel.cu  main.cpp  main_community.cpp  main_distributed_bfs.cpp  main_distributed_community.cpp  util.cpp  util.h
tests/: CMakeLists.txt  gpu_test.cpp  main_test.cpp  mpiUnitTests  mpi_test.cpp  runUnitTests  test_main.cpp
